# mcp-agent-bridge

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: example.env  settings.py
config/systemd/: claude-mcp-proxy.service  codex-mcp-proxy.service
docs/: ARCHITECTURE.md  INSTALLATION.md  TASK_SPECIFICATIONS.md  implementation_guide_codex_claude_cli_mcp_agentzero.md
scripts/: install.sh  start_all.sh  stop_all.sh
src/: __init__.py  agent_zero_mcp_stdio.py  claude_mcp_proxy.py  codex_client.py  codex_mcp_proxy.py
src/base/: __init__.py  http_stdio_proxy.py  stdio_http_bridge.py
tests/: __init__.py  test_bridges.py
